Added description for minified file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		<pre><code>&lt;img src="placeholder.jpg" id="map" /&gt;
 &lt;p&gt;&lt;span id="error"&gt;&lt;/span&gt;&lt;/p&gt;</code></pre>
 		<p>The following link to the script must also be pasted:</p>
-		<pre><code>&lt;script src="gpsNav.js"&gt;&lt;/script&gt;</code></pre>
+		<pre><code>&lt;script src="gpsNav.min.js"&gt;&lt;/script&gt;</code></pre>
+		<p><span style="font-style: italic; font-size: smaller;">Note: gpsNav.min.js can be replaced with gpsNav.js if you decide to use the (full) file with comments instead.</span></p>
 		<p>To initialize/activate the app, simply paste this script after <code>gpsNav.js</code>:</p>
 		<pre><code>&lt;script&gt;gpsNav.init();&lt;/script&gt;</code></pre>
 		<p>If you want to add your own custom settings (such as changing the size of the map), please read <code>README.md</code> to learn more.</p>
@@ -24,7 +25,7 @@
 		<img src="placeholder.jpg" id="map" />
 		<p><span id="error"></span></p>
 		<!-- gpsNav Script -->
-		<script src="gpsNav.js"></script>
+		<script src="gpsNav.min.js"></script>
 		<script>
 		/* Example initialization method */
 
