Used gpsNav.min.js instead of gpsNav.js

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<section class="12u$">
 							<h3>gpsNav Application - GitHub Pages</h3>
 							<p>Welcome to the <code>gh-pages</code> branch of my <code>gpsNav</code> application!  Below are two basic demos of how you could use this application as an online GPS tracking device - and most importantly, how you could customize it according to your own wants and needs.</p>
-							<p>To initialize the <code>gpsNav</code> app, just simply call <code>gpsNav.init();</code> after you have made a link to the <code>gpsNav.js</code> file.</p>
+							<p>To initialize the <code>gpsNav</code> app, just simply call <code>gpsNav.init();</code> after you have made a link to the <code>gpsNav.min.js</code> (or <code>gpsNav.js</code>) file.</p>
 							<pre><code>gpsNav.init();</code></pre>
 							<p><a class="button" id="basic" href="javascript:void(0)" onclick="basic()">Try Me</a></p>
 							<p>To change the settings of the application, simply pass an object as the argument for the <code>init()</code> function.</p>
@@ -125,7 +125,7 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/main.js"></script>
 		<!-- My Scripts -->
-			<script src="gpsNav.js"></script>
+			<script src="gpsNav.min.js"></script>
 			<script type="text/javascript">
 			function basic() {
 				gpsNav.init();
