Updated gpsNav GitHub Pages
Included link to newer versions

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 				<!-- Intro -->
 					<div class="row">
 						<section class="12u$">
+							<p><span style="font-size: smaller; font-style: italic;">Note: Newer versions of this app are already available.  The current newest version is <a href="https://github.com/DonaldKellett/gpsNav-v2" target="_blank">v2</a>.  There are no other versions other that <strong>v1</strong> and <strong>v2</strong>.</span></p>
 							<h3>gpsNav Application - GitHub Pages</h3>
 							<p>Welcome to the <code>gh-pages</code> branch of my <code>gpsNav</code> application!  Below are two basic demos of how you could use this application as an online GPS tracking device - and most importantly, how you could customize it according to your own wants and needs.</p>
 							<p>To initialize the <code>gpsNav</code> app, just simply call <code>gpsNav.init();</code> after you have made a link to the <code>gpsNav.min.js</code> (or <code>gpsNav.js</code>) file.</p>
